[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
author = "Evan Carter"
about = "A simple command line tool for key value pairs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
